# stock-recommender

./: .env.example  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  run_step1.py  run_step2.py  run_step3.py  run_step4.py  run_step5.py  run_step6.py  run_test.py  work_history.md
.claude/: settings.local.json
docs/: qwen3_integration_ideas.md
src/: config.py  main.py
src/backtest/: evaluator.py  insight_generator.py  summary_builder.py
src/collector/: disclosure_collector.py  finance_collector.py  index_collector.py  investor_collector.py  macro_collector.py  price_collector.py
src/db/: connection.py  migrate_add_price_momentum.sql  migrate_recategorize_disclosures.py  migrate_upgrade.sql  repository.py  schema.sql
src/scoring/: aggregator.py  base.py  disclosure_scorer.py  filters.py  fundamental.py  macro_adjuster.py  market_regime.py  momentum.py  technical.py
src/utils/: krx_auth.py  llm_client.py  logger.py
tests/: test_aggregator.py  test_backtest_insight.py  test_disclosure_scorer.py  test_filters.py  test_fundamental.py  test_macro_adjuster.py  test_market_regime.py  test_momentum.py  test_technical.py
